--- a/views/todo.hbs
+++ b/views/todo.hbs
@@ -20,23 +20,13 @@
           <div align="center" class="text-primary fw-bold mx-auto" style="font-size:50px">To-do list</div>
           <a id="btn-login" href="./login" class="btn btn-primary px-5 py-3">Login</a>
      </div>
-     <div id="aa"></div>
+     <div id="idTodo" style="visibility:hidden">{{data}}</div>
      <div class="container border border-primary my-5 p-5" style="max-width: 1000px;">
-          <div class="input-group mb-3">
-               <input id="inputNameTDL" type="text" class="form-control fs-3" placeholder="name todo list">
-               <span class="input-group-text">
-                    <a id="btnAddTDL" role="button" class="link-primary fs-5">
-                         <i class="bi bi-plus-circle"></i> Add new to-do list
-                    </a>
-               </span>
+          <div class=" p-2 m-2" id="TodoLists">
           </div>
-          {{#each data.todoList as |d|}}
-          <div>
-               <a href="/todoList/{{d.id}}">{{d.name}}</a>
-          </div>
-          {{/each}}
      </div>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+     <script type="module" src="/js/utilities.js"></script>
      <script type="module" src="/js/app.js">
      </script>
 </body>
